After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 732916 - treeview: column drop target visualization broken
treeview: column drop target visualization broken
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkTreeView
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtktreeview-bugs
gtktreeview-bugs
Depends on:
Blocks:
 
 
Reported: 2014-07-08 18:26 UTC by Matthias Clasen
Modified: 2014-09-08 02:28 UTC
See Also:
GNOME target: 3.14
GNOME version: ---


Attachments
wip patch (10.97 KB, patch)
2014-07-09 01:55 UTC, Matthias Clasen
none Details | Review

Description Matthias Clasen 2014-07-08 18:26:35 UTC
We try to render arrows or a rectangle at the place where the dragged column will snap in. The rendering is broken, it appears as a solid white rectangle. The arrows don't show up at all.
Comment 1 Matthias Clasen 2014-07-09 01:55:41 UTC
Created attachment 280201 [details] [review]
wip patch

This patch is not complete, but it gets some of the rendering back to working.
Comment 2 Matthias Clasen 2014-08-12 17:05:38 UTC
some further findings: It appears shapes are broken for child windows. If I make the drag_highlight_window a toplevel for the 'original position' case as it already is for the arrow cases, then I do get the correct rectangle shape. Still need to draw that window in gtk_tree_view_draw, and there's some issue where the window does not show up.